--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "simplicity-web",
-  "version": "0.1.0",
+  "name": "simplicity-website",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "gh-pages": "^2.2.0",
+    "hover.css": "^2.3.2",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
     "react-router-dom": "^5.1.2",
@@ -12,10 +14,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "eject": "react-scripts eject",
+    "lint": "eslint . --fix",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -b master -d build"
   },
   "browserslist": {
     "production": [
@@ -28,5 +30,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-almeida": "^1.0.6"
   }
 }
